@@ -207,7 +207,7 @@ SCIP_DECL_NLPISOLVE(SCIPsolveNlpiParam);
 #if !defined(_MSC_VER) || _MSC_VER >= 1800
 #define SCIPsolveNlpi(scip, nlpi, ...) \
    SCIPsolveNlpiParam(scip, nlpi, SCIP_VARARGS_FIRST((__VA_ARGS__, ignored)), \
-      (SCIP_NLPPARAM){ SCIP_NLPPARAM_DEFAULT_INITS(scip), SCIP_VARARGS_REST(__VA_ARGS__, .caller = __FILE__) })
+      (SCIP_NLPPARAM){ SCIP_NLPPARAM_DEFAULT_INITS(scip), SCIP_VARARGS_REST((__VA_ARGS__, .caller = __FILE__)) })
 #else
 /* very old MSVC doesn't support C99's designated initializers, so have a version of SCIPsolveNlpi() that just ignores given parameters
  * (compilation of scip_nlpi.c will print a warning)
